deployment/overlay/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: pmironenko.dacdevops.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-service
                port:
                  name: web
  tls:
    - hosts:
        - pmironenko.dacdevops.ru
      secretName: pmironenko-certificate
